// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics capture merges all metrics 1`] = `
Object {
  "a": Array [
    Object {
      "b": 2,
      "c": 3,
    },
    Object {
      "d": 4,
      "e": 5,
    },
  ],
  "collection_interval_in_millis": 5000,
  "last_updated": "2017-04-14T18:35:41.534Z",
  "process": Object {
    "uptime_ms": 1980,
  },
}
`;

exports[`Metrics captureEvent parses event with missing fields / NaN for responseTimes.avg 1`] = `
Object {
  "concurrent_connections": undefined,
  "event_loop_delay": undefined,
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": undefined,
        "1m": undefined,
        "5m": undefined,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": 12000000,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": undefined,
      "heap_max_in_bytes": undefined,
      "heap_used_in_bytes": undefined,
      "resident_set_size_in_bytes": undefined,
    },
    "pid": 8675309,
    "uptime_ms": 5000000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 22,
    },
    "total": 22,
  },
  "response_times": Object {
    "avg_in_millis": undefined,
    "max_in_millis": 4,
  },
  "sockets": undefined,
}
`;

exports[`Metrics captureEvent parses the hapi event 1`] = `
Object {
  "concurrent_connections": 0,
  "event_loop_delay": 1.6091690063476562,
  "os": Object {
    "cpu": Object {
      "load_average": Object {
        "15m": 1.89794921875,
        "1m": 2.20751953125,
        "5m": 2.02294921875,
      },
    },
    "mem": Object {
      "free_in_bytes": 12,
      "total_in_bytes": 24,
    },
    "uptime_ms": 12000000,
  },
  "process": Object {
    "mem": Object {
      "external_in_bytes": 1779619,
      "heap_max_in_bytes": 168194048,
      "heap_used_in_bytes": 130553400,
      "resident_set_size_in_bytes": 193716224,
    },
    "pid": 8675309,
    "uptime_ms": 5000000,
  },
  "requests": Object {
    "disconnects": 0,
    "status_codes": Object {
      "200": 22,
    },
    "total": 22,
  },
  "response_times": Object {
    "avg_in_millis": 1.8636363636363635,
    "max_in_millis": 4,
  },
  "sockets": Object {
    "http": Object {
      "total": 0,
    },
    "https": Object {
      "total": 0,
    },
  },
}
`;
